<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- Image -->
        <ImageView
            android:id="@+id/ivEventImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:contentDescription="@string/title"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <!-- Title -->
        <TextView
            android:id="@+id/tvEventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Title -->
        <TextView
            android:id="@+id/tvOwnerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/ownerName"
            android:textSize="16sp" />


        <!-- Description -->
        <TextView
            android:id="@+id/tvEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/detail_event"
            android:textSize="14sp"/>

        <!-- Time -->
        <TextView
            android:id="@+id/tvEventTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/date_event"
            android:textSize="14sp"/>

        <!-- Location -->
        <TextView
            android:id="@+id/tvCityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/locaiton_online"
            android:textSize="14sp" />

        <!-- Quota & Registrants -->
        <TextView
            android:id="@+id/tvEventQuota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/quota"
            android:textSize="14sp" />

        <!-- Register Button -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            tools:ignore="VisualLintButtonSize" />


    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab_favorite"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end|bottom"
    android:layout_margin="16dp"
    android:src="@drawable/ic_favorite_border"
    android:contentDescription="@string/favorite_button" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
